@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020231113"
-#define public MagickPackageReleaseDate "snapshot-20231113"
+#define public MagickPackageVersionAddendum ".020231114"
+#define public MagickPackageReleaseDate "snapshot-20231114"
